--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,87 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.bg-homeBg {
+  background-image: url(/images/background/bg.jpg);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto
+}
+
+@media (min-width: 100%) {
+  .container {
+    max-width: 100%
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media (min-width: 992px) {
+  .container {
+    max-width: 992px
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px
+  }
+}
+
+.after-effect {
+  position: relative;
+  display: inline-block;
+  --tw-gradient-from: #fa5252;
+  --tw-gradient-to: rgba(250, 82, 82, 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #dd2476;
+  font-family: Roboto Slab, serif;
+  font-size: 2.5rem;
+  font-weight: 700
+}
+
+.after-effect,
+.after-effect:after {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+
+.after-effect:after {
+  position: absolute;
+  top: 50%;
+  height: .125rem;
+  --tw-translate-y: -50%;
+  border-radius: .375rem;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-content: "";
+  content: var(--tw-content)
+}
+
+@media (min-width: 768px) {
+  .after-effect:after {
+    content: var(--tw-content);
+    width: 12rem
+  }
+}
+
+.socialbtn {
+  display: flex;
+  height: 2.5rem;
+  width: 2.5rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 246 246/var(--tw-bg-opacity));
+  --tw-gradient-from: #fa5252;
+  --tw-gradient-to: rgba(250, 82, 82, 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #dd2476;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-duration: .3s;
+  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+}
+
+.linked {
+  color: #fff !important;
 }
